2013-02-25  Nico Weber  <thakis@chromium.org>

        Make ninja the default build system for build-webkit --chromium on windows
        https://bugs.webkit.org/show_bug.cgi?id=110731

        Reviewed by Jochen Eisinger.

        With http://crbug.com/169945 fixed, this should now work.

        * Scripts/update-webkit-chromium:

2013-02-24  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK] GTK+ 2 build broken since GTK_API_VERSION_2 moved to autoconfig.h
        https://bugs.webkit.org/show_bug.cgi?id=110702

        Reviewed by Martin Robinson.

        * GtkLauncher/main.c: include autotoolsconfig.h.
        * Scripts/webkitpy/style/checker.py: make GtkLauncher/main.c exempt of
        the include ordering check, since it uses autotoolsconfig.h which needs to
        come first.

2013-02-24  Hajime Morrita  <morrita@google.com>

        [Custom Elements] Implement bare-bone document.register()
        https://bugs.webkit.org/show_bug.cgi?id=100229

        Reviewed by Adam Barth.

        Added enableCustomDOMElements flag.

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::TestShell):

2013-02-23  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] DumpRenderTree TestShell::initialize should take Platform* now that WebKitPlatformSupport is empty
        https://bugs.webkit.org/show_bug.cgi?id=110606

        Reviewed by Adam Barth.

        Part of a larger refactoring series; see tracking bug 82948.

        * DumpRenderTree/DumpRenderTree.gypi:
        * DumpRenderTree/chromium/DumpRenderTree.cpp:
        (WebKitSupportTestEnvironment::WebKitSupportTestEnvironment):
        (WebKitSupportTestEnvironment::mockPlatform):
        (WebKitSupportTestEnvironment):
        * DumpRenderTree/chromium/MockPlatform.cpp: Copied from Tools/DumpRenderTree/chromium/MockWebKitPlatformSupport.cpp.
        (MockPlatform::create):
        (MockPlatform::MockPlatform):
        (MockPlatform::~MockPlatform):
        (MockPlatform::setInterfaces):