@@ -37,6 +37,7 @@
 #include "TestRunner.h"
 #include "TextInputController.h"
 #include "WebCache.h"
+#include "WebRuntimeFeatures.h"
 #include <public/WebString.h>
 #include <public/WebURL.h>
 #include <string>
@@ -55,6 +56,33 @@ TestInterfaces::TestInterfaces()
     , m_webView(0)
     , m_delegate(0)
 {
+    WebRuntimeFeatures::enableDataTransferItems(true);
+    WebRuntimeFeatures::enableDeviceMotion(false);
+    WebRuntimeFeatures::enableGeolocation(true);
+    WebRuntimeFeatures::enableIndexedDatabase(true);
+    WebRuntimeFeatures::enableInputTypeDateTime(true);
+    WebRuntimeFeatures::enableInputTypeDateTimeLocal(true);
+    WebRuntimeFeatures::enableInputTypeMonth(true);
+    WebRuntimeFeatures::enableInputTypeTime(true);
+    WebRuntimeFeatures::enableInputTypeWeek(true);
+    WebRuntimeFeatures::enableFileSystem(true);
+    WebRuntimeFeatures::enableJavaScriptI18NAPI(true);
+    WebRuntimeFeatures::enableMediaSource(true);
+    WebRuntimeFeatures::enableEncryptedMedia(true);
+    WebRuntimeFeatures::enableMediaStream(true);
+    WebRuntimeFeatures::enablePeerConnection(true);
+    WebRuntimeFeatures::enableWebAudio(true);
+    WebRuntimeFeatures::enableVideoTrack(true);
+    WebRuntimeFeatures::enableGamepad(true);
+    WebRuntimeFeatures::enableShadowDOM(true);
+    WebRuntimeFeatures::enableCustomDOMElements(true);
+    WebRuntimeFeatures::enableStyleScoped(true);
+    WebRuntimeFeatures::enableScriptedSpeech(true);
+    WebRuntimeFeatures::enableRequestAutocomplete(true);
+    WebRuntimeFeatures::enableExperimentalContentSecurityPolicyFeatures(true);
+    WebRuntimeFeatures::enableSeamlessIFrames(true);
+    WebRuntimeFeatures::enableCanvasPath(true);
+
     resetAll();
 }
 
