@@ -1,3 +1,15 @@
+2013-02-25  Jochen Eisinger  <jochen@chromium.org>
+
+        [chromium] move WebRuntimeFeatures configuration to TestRunner library
+        https://bugs.webkit.org/show_bug.cgi?id=110712
+
+        Reviewed by Nico Weber.
+
+        * DumpRenderTree/chromium/TestRunner/src/TestInterfaces.cpp:
+        (WebTestRunner::TestInterfaces::TestInterfaces):
+        * DumpRenderTree/chromium/TestShell.cpp:
+        (TestShell::TestShell):
+
 2013-02-25  Nico Weber  <thakis@chromium.org>
 
         Make ninja the default build system for build-webkit --chromium on windows
